Fix submit overflow in review layout

--- a/app/assets/stylesheets/general.css.sass
+++ b/app/assets/stylesheets/general.css.sass
@@ -26,6 +26,9 @@
 .alert-notice
   @extend .alert-info
 
+.ow-hidden
+  overflow: hidden
+
 #user-menu
   padding: 10px 15px
   display: block
